Fix word-wrap Fix word-wrap. However, the caret does not line up with the div since they break text differently

--- a/ui/static/main.css
+++ b/ui/static/main.css
@@ -598,6 +598,10 @@ video {
   justify-content: space-between;
 }
 
+.break-words {
+  overflow-wrap: break-word;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
